styles/style.css
html{
  height: 100%;
}
body {
  display: auto;
  height: 100vh;
}

.extra{
  height: 90%;
}
.card-img-top {
    width: 100%;
    height: 10vh;
    object-fit: contain;    
    /* object-fit: cover;  might work too  */
}

.responsive {
    width: 100%;
    height: auto;
  }


  
.cardLink:visited{
    color: inherit;
    text-decoration: none;
}

.cardLink:link{
    color: inherit;
    text-decoration: none;
}

  /* input dialog */
  .dialog {
    z-index: 5;
    background: #000;
    position: absolute;
    width: 50%;
    height: 500px;
    top: 0;
    right: 0;
    display: none; }
    @media (max-width: 767.98px) {
      .dialog {
        width: 100%; } }
  
  .dialog-header {
    margin: 20px;
    color: #fff;
    text-align: center;
    font-size: 28px; }
  
  .form-container {
    margin: 25% 5% 0 5%; }
  
  .form-label {
    text-transform: uppercase;
    font-size: 13px;
    letter-spacing: 1px;
    color: rgba(255, 255, 255, 0.9); }
  
  .input {
    border: none;
    background: none;
    border-bottom: 1px rgba(255, 255, 255, 0.2) solid;
    display: block;
    margin-bottom: 50px;
    width: 300px;
    height: 20px;
    text-align: center;
    -webkit-transition: border-color 250ms;
    -o-transition: border-color 250ms;
    transition: border-color 250ms;
    color: #fff; }
  
  .input:focus {
    outline: none;
    border-color: #fff; }
  
  .error-input {
    border-color: #cd4dcc; }
  

  .go-to-Graph{
    display: flex;
    align-items: center;
    justify-content: center;
  }

  
  /*Calendar css*/

.content {
  overflow: none;
  width: 100%;
  max-width: 790px;
  padding: 0px 0;
  height: 500px;
  position: relative;
  margin: 20px auto;
  background: #28A745; }

/*  Events display */
.events-container {
  overflow-y: scroll;
  height: fit-content;
  width: 50%;
  margin: 0px auto;
  display: inline-block;
  padding: 0px;
  border-bottom-right-radius: 3px;
  border-top-right-radius: 3px;
  padding: 0; }
  @media (max-width: 767.98px) {
    .events-container {
      width: 100%;
      height: auto; } }

.events-container:after {
  clear: both; }

.event-card {
  padding: 20px 10px;
  max-width: 100%;
  display: block;
  background: #fff;
  border: none !important;
  margin: 20px;
  margin-left: 12px; }
  @media (max-width: 991.98px) {
    .event-card {
      margin: 10px; } }
  @media (max-width: 767.98px) {
    .event-card {
      margin: 0;
      background: #e6e6e6; } }

.event-count, .event-name, .event-cancelled, .event-timer {
  display: inline;
  padding: 0 10px;
  font-size: 1rem; }

  .event-timer:hover{
    border-radius: 5px;
    background-color: gray;
    padding: 10px;
    display: inline;
  }

.event-count {
  color: #28A745;
  text-align: right; }

.event-name {
  padding-right: 0;
  text-align: left; }

.event-cancelled {
  color: red;
  text-align: right; }

/*  Calendar wrapper */
.calendar-container {
  position: relative;
  margin: 0 auto;
  height: 100%;
  width: 50%;
  background: #fff;
  font: 13px Helvetica, Arial, san-serif;
  display: inline-block;
  padding: 20px;
}
  @media (max-width: 991.98px) {
    .calendar-container {
      padding: 0; } }
  @media (max-width: 767.98px) {
    .calendar-container {
      padding: 0;
      width: 100%; } }

.calendar-container:after {
  clear: both; }

.calendar {
  width: 100%;
  padding: 0; }

/* Calendar Header */
.year-header {
  background: #fff;
  height: 40px;
  text-align: center;
  position: relative;
  color: #fff;
  border-top-left-radius: 3px;
  margin-top: 20px; }

.year-header span {
  display: inline-block;
  font-size: 20px;
  line-height: 40px;
  color: #000; }

.left-button, .right-button {
  cursor: pointer;
  width: 28px;
  text-align: center;
  position: absolute;
  color: #cccccc !important;
  -webkit-transition: 0.3s;
  -o-transition: 0.3s;
  transition: 0.3s;
  font-size: 14px !important; }
  @media (prefers-reduced-motion: reduce) {
    .left-button, .right-button {
      -webkit-transition: none;
      -o-transition: none;
      transition: none; } }
  .left-button:hover, .right-button:hover {
    color: #28A745 !important; }

.left-button {
  left: 0; }

.right-button {
  right: 0;
  top: 0; }

/* Buttons */
.button {
  cursor: pointer;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  outline: none;
  font-size: 1rem;
  border-radius: 25px;
  padding: 0.65rem 1.9rem;
  -webkit-transition: .2s ease all;
  -o-transition: .2s ease all;
  transition: .2s ease all;
  color: white;
  border: none;
  background: #28A745; }
  .button.button-white {
    background: #a4ff5e;
    color: #000; }
  .button:focus {
    -webkit-box-shadow: none;
    box-shadow: none;
    outline: none; }

#cancel-button {
  background: white;
  color: #000;
}

#add-button {
  display: block;
  position: absolute;
  right: 20px;
  bottom: 20px; }

#add-button:hover, #ok-button:hover, #cancel-button:hover {
  -webkit-transform: scale(1.03);
  -ms-transform: scale(1.03);
  transform: scale(1.03); }

#add-button:active, #ok-button:active, #cancel-button:active {
  -webkit-transform: translateY(3px) scale(0.97);
  -ms-transform: translateY(3px) scale(0.97);
  transform: translateY(3px) scale(0.97); }

  

/* Days/months tables */
.days-table, .dates-table, .months-table {
  border-collapse: separate;
  text-align: center; }

.day {
  height: 26px;
  width: 26px;
  padding: 0 10px;
  line-height: 26px;
  border: 2px solid transparent;
  text-transform: uppercase;
  font-size: 10px;
  color: #000; }

.month {
  cursor: default;
  height: 26px;
  width: 26px;
  padding: 0 2px;
  padding-top: 10px;
  line-height: 26px;
  text-transform: uppercase;
  font-size: 11px;
  color: #cccccc;
  -webkit-transition: all 250ms;
  -o-transition: all 250ms;
  transition: all 250ms; }
  @media (max-width: 991.98px) {
    .month {
      font-size: 8px; } }
  @media (max-width: 767.98px) {
    .month {
      font-size: 10.5px; } }

.active-month {
  font-weight: 700;
  color: #000; }

.month:hover {
  color: #28A745; }

/*  Dates table */
.table-date {
  cursor: default;
  color: #2b2b2b;
  height: 26px;
  width: 26px;
  font-size: 15px;
  padding: 10px;
  line-height: 26px;
  text-align: center;
  border-radius: 50%;
  border: 2px solid transparent;
  -webkit-transition: all 250ms;
  -o-transition: all 250ms;
  transition: all 250ms;
  position: relative; }

.table-date:not(.nil):hover {
  border-color: #a4ff5e; }

.event-date {
  border-color: #28A745;
  background: #28A745;
  color: #fff; }
  .event-date:after {
    position: absolute;
    top: 0;
    left: 0;
    width: 10px;
    height: 10px;
    border-radius: 50%;
    content: '';
    background: #a4ff5e; }

.active-date {
  background: #a4ff5e;
  color: #fff; }

.event-date.active-date {
  background: #28A745; }

.fa-chevron-left:before {
    content: "\f053";
    position: relative;
    display: flex;
    width: 0;
    height: 0;
    content: '';
    justify-content: center;
    align-items: center;
    top: 50%;
    left: 0;
    transform: translateY(-50%);
    border-top: 10px solid transparent;
    border-bottom: 10px solid transparent;
    border-right: 15px solid black;
}

.fa-chevron-right:before {
  content: "\f054";
  position: relative;
  display: inline-block;
  width: 0;
  height: 0;
  content: '';
  position: absolute;
  top: 50%;
  right: 0;
  transform: translateY(-50%);
  border-top: 10px solid transparent;
  border-bottom: 10px solid transparent;
  border-left: 15px solid black;
}

*::before,
*::after {
  -webkit-box-sizing: border-box;
  box-sizing: border-box;
  }

  .fa {
    display: inline-block;
    font: normal normal normal 14px/1 FontAwesome;
    font-size: inherit;
    text-rendering: auto;
    -webkit-font-smoothing: antialiased;
    -moz-osx-font-smoothing: grayscale
}

